Feature #4000 : adding a new Javascript plugin which centralizes the verification of Dates filled by users. A try on TODO tool from personal space. Trying to perform unit tests of methods included in the JavaScript plugin.

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -239,6 +239,7 @@ GML.MustContainsCorrectDate = doit contenir une date
 GML.MustContainsPostDateTo = doit contenir une date post\u00e9rieure \u00e0
 GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00e9rieure ou \u00e9gale \u00e0
 GML.MustContainsPostDate = doit contenir une date post\u00e9rieure \u00e0 aujourd'hui
+GML.MustContainsPostOrEqualDate = doit contenir une date post\u00e9rieure ou \u00e9gale \u00e0 aujourd'hui
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
