--- a/it-test-core/src/test/resources/org/silverpeas/general.properties
+++ b/it-test-core/src/test/resources/org/silverpeas/general.properties
@@ -29,12 +29,12 @@ webdav.workspace=jackrabbit
 webdav.respository=repository
 
 # working directory for components (created with the instanciators)
-uploadsPath=target/temp/uploads
+uploadsPath=${project.build.directory}/temp/uploads
 # working directory for the search engine
-uploadsIndexPath=target/temp/index
+uploadsIndexPath=${project.build.directory}/temp/index
 removeLocksOnInit=yes
 # working directory for temporaries files
-tempPath=target/temp/temp
+tempPath=${project.build.directory}/temp/temp
 
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
