--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -28,6 +28,7 @@ authentication.logon.login = Identifiant
 authentication.logon.password = Mot de passe
 authentication.logon.domain = Domaine
 authentication.logon.passwordForgotten = Mot de passe oubli\u00E9 ?
+authentication.logon.changePassword = Changer mon mot de passe
 authentication.logon.passwordRemember = M\u00E9moriser le mot de passe ?
 authentication.logon.newRegistration.tease = Vous n'avez pas encore de compte Silverpeas ?
 authentication.logon.newRegistration.create = Cr\u00E9ez-en un
