--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
@@ -31,6 +31,9 @@ encryptionClass =
 # Allow new user to self register in Silverpeas
 allowUserSelfRegistration = false
 
+# Allow user to change his password from login page
+changePwdFromLoginPageActive = false
+
 # Such new user will be created in below domainId
 newRegistrationEnabled = false
 justRegisteredDomainId = 0
