--- a/config-core/src/main/config/properties/org/silverpeas/lookAndFeel/generalLook.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/lookAndFeel/generalLook.properties
@@ -25,10 +25,10 @@
 loginPage =
 
 # Feuille de style par d\u00e9faut
-defaultStyleSheet = 
+defaultStyleSheet =
 
 # Feuille de style sp\u00e9cifique au login
-defaultLoginStyleSheet = 
+defaultLoginStyleSheet =
 
 # Les logos (login et topBar)
 logo =
@@ -39,12 +39,13 @@ anonymousId=
 # Activation de l'oubli de mot de passe (forgottenPwdActive = personalQuestion || reinit || false)
 forgottenPwdActive = reinit
 userResetPasswordPage = /defaultResetPassword.jsp
+changePasswordFromLoginPage = /defaultChangePassword.jsp
 
 # Question personnelle (en cas d'oubli de mot de passe)
 userLoginQuestionEnabled=true
 userLoginQuestionPage=/defaultLoginQuestion.jsp
 
-# Si l'utilisateur n'a pas encore rempli sa question personnelle, 
+# Si l'utilisateur n'a pas encore rempli sa question personnelle,
 # on peut le forcer \u00e0 la remplir
 userLoginQuestionMandatory=true
 userLoginQuestionSelectionPage=/defaultLoginQuestionSelection.jsp
@@ -66,6 +67,6 @@ forgottenPasswordChangeAllowed = /defaultReInitPassword.jsp?Action=FirstMailSend
 forgottenPasswordChangeNotAllowed = /defaultReInitPassword.jsp?Action=ChangeNotAllowed
 forgottenPasswordReset = /defaultReInitPassword.jsp?Action=NewPasswordSended
 forgottenPasswordResetError = /defaultReInitPassword.jsp?Action=NewPasswordError
-forgottenPasswordSendMessage = 
-forgottenPasswordError = 
+forgottenPasswordSendMessage =
+forgottenPasswordError =
 forgottenPasswordLoginUrl = /Login.jsp
