in #memory #fs :  Adding netbeans filesystem for tests

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -255,7 +255,7 @@
       <artifactId>hamcrest-all</artifactId>
     </dependency>
     <dependency>
-      <groupId>net.fortuna.ical4j</groupId>
+      <groupId>org.mnode.ical4j</groupId>
       <artifactId>ical4j</artifactId>
     </dependency>
     <dependency>
@@ -365,6 +365,14 @@
       <groupId>org.im4java</groupId>
       <artifactId>im4java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.netbeans.api</groupId>
+      <artifactId>org-openide-util</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.netbeans.api</groupId>
+      <artifactId>org-openide-filesystems</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -430,7 +438,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
-		  <argLine>-XX:MaxPermSize=512m</argLine>
+          <argLine>-XX:MaxPermSize=512m</argLine>
           <systemProperties>
             <property>
               <name>java.awt.headless</name>
