--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
@@ -34,6 +34,9 @@ allowUserSelfRegistration = false
 # Allow user to change his password from login page
 changePwdFromLoginPageActive = false
 
+# By default login answer to personal question is not crypted
+loginAnswerCrypted = false
+
 # Such new user will be created in below domainId
 newRegistrationEnabled = false
 justRegisteredDomainId = 0
