--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -57,3 +57,12 @@ quota.space.datastorage.activated = false
 quota.space.datastorage.default.maxCount = 0
 # Data storage limit of a user personal space (in Mega byte)
 quota.personalspace.datastorage.default.maxCount = 0
+
+# Specify a global list of authorized files by their extensions (*.xxx or xxx), separated each one by a comma.
+# For example : *.xml, doc, *.gif, jpg
+# Ignored if authorized or forbidden files are defined from the component parameters
+file.authorized.default =
+# Specify a global list of forbidden files by their extensions (*.xxx or xxx), separated each one by a comma.
+# Parameter "file.authorized.default" is prioritary.
+# Ignored if authorized or forbidden files are defined from the component parameters
+file.forbidden.default =
