--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -989,6 +989,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <exception-type>org.silverpeas.admin.space.quota.process.check.exception.DataStorageQuotaException</exception-type>
     <location>/admin/jsp/errorpageDataStorageQuota.jsp</location>
   </error-page>
+  <error-page>
+    <exception-type>org.silverpeas.admin.component.exception.ComponentFileFilterException</exception-type>
+    <location>/admin/jsp/errorpageForbiddenFile.jsp</location>
+  </error-page>
   <security-constraint>
     <display-name>Authentification</display-name>
     <web-resource-collection>
