--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -29,6 +29,10 @@
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
     </dependency>
     <dependency>
