--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -64,6 +64,8 @@ authentication.password.aboutToExpire = Votre mot de passe arrive bient\u00F4t \
 authentication.password.expired = Votre mot de passe a expir\u00E9. Vous devez le changer pour pouvoir acc\u00E9der \u00E0 l'application.
 authentication.password.change = Changer le mot de passe
 authentication.password.remindMeLater = Me le rappeler plus tard
+authentication.password.showRules = Voir les règles sur les mots de passe
+authentication.password.policies = Règles sur les mots de passe
 
 registration.title = Enregistrement
 registration.noSilverpeasAccount = Vous ne possédez pas encore de compte dans Silverpeas.
