--- a/config-core/src/main/config/initialize/AttachmentInitializeSettings.properties
+++ b/config-core/src/main/config/initialize/AttachmentInitializeSettings.properties
@@ -22,4 +22,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 Initialize = true
-InitializeClass = org.silverpeas.attachment.control.AttachmentInitialize
+InitializeClass = org.silverpeas.attachment.AttachmentInitialize
+CallBack = true
+CallBackClass = org.silverpeas.attachment.AttachmentCallback
