--- a/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_2.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/selection/multilang/selectionBundle_2.properties
@@ -50,3 +50,4 @@ selection.SelectedUsers=S\u00e9lection
 selection.SelectedGroups=S\u00e9lection
 selection.MyContacts=Mes contacts
 selection.SelectedUserOrGroup=S\u00e9lection unique
+selection.NextGroups=Groupes suivants...
