--- a/ejb-core/tagcloud/pom.xml
+++ b/ejb-core/tagcloud/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.10.5</version>    
+    <version>5.10.6-SNAPSHOT</version>    
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
