--- a/config-core/src/main/config/properties/org/silverpeas/silverstatistics/SilverStatistics.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/silverstatistics/SilverStatistics.properties
@@ -39,7 +39,7 @@ SilverPeasDataPath0 = @UploadsDir@
 # every Sunday in March at 03:00 and 21:00.
 
 # once a day (before Cumul)
-scheduledGetStatSizeTimeStamp=* 1 * * *
+scheduledGetStatSizeTimeStamp=0 1 * * *
 #scheduledGetStatSizeTimeStamp=0,3,6,9,12,15,18,21,24,27,30,33,36,39,42,45,48,51,54,57 * * * *
 
 # once a day (before Cumul)
@@ -47,7 +47,7 @@ scheduledGetStatVolumeTimeStamp=30 1 * * *
 #scheduledGetStatVolumeTimeStamp=0,3,6,9,12,15,18,21,24,27,30,33,36,39,42,45,48,51,54,57 * * * *
 
 # once a day (after getStatSize)
-scheduledCumulStatTimeStamp=* 2 * * *
+scheduledCumulStatTimeStamp=0 2 * * *
 #scheduledCumulStatTimeStamp=1,4,7,10,13,16,19,22,25,28,31,34,37,40,43,46,49,52,55,58 * * * *
 
 
