Feature #4142 : adding password services (including password rule management). - adding new services to manage passwords by a centralized way (rules, checks, generation) - adding new password WEB Services - adding new Silverpeas JQuery plugin to manage passwords - wiring user profile with the new Silverpeas JQuery Plugin - wiring administration user creation and modification with the new Silverpeas JQuery Plugin - wiring user CSV import with the new password checking services - fixing some problems in user credential management - wiring force password change with the new Silverpeas JQuery Plugin - wiring password about to expire with the new Silverpeas JQuery Plugin - wiring password expired with the new Silverpeas JQuery Plugin - wiring reset password with the new Silverpeas JQuery Plugin - removing parameters that become unused in property files - modifying copyrights on login page

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
@@ -55,8 +55,7 @@ JDP.groupExport = Exporter le groupe
 
 JDP.missingFieldStart = Le champ '
 JDP.missingFieldEnd = ' est obligatoire
-JDP.minLength = ' doit contenir au moins
-JDP.noSpaces = ' ne doit pas contenir d'espace
+JDP.pwdError = ' contient un mot de passe incorrect
 JDP.confirmPwdError = Les mots de passe ne correspondent pas.
 
 JDP.name=Nom
@@ -95,6 +94,7 @@ JDP.userRights = Droits
 JDP.userSynchro = Synchroniser un utilisateur
 JDP.userUnsynchro = Supprimer la synchronisation d'un utilisateur
 JDP.userUpdate = Editer les informations de l'utilisateur
+JDP.pwdTitleErrors = Les r\u00e8gles suivantes ne sont pas respect\u00e9es :
 
 JDP.welcome =  Bienvenue sur le module R\u00e9f\u00e9rentiel
 
