--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -183,7 +183,7 @@ GML.yes						    = Oui
 
 # Titre fen\u00eatre
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \\_________________________________________
-GML.trademark						= &copy; 2001-2012 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
+GML.trademark						= &copy; 2001-2013 <a href\="http\://www.silverpeas.com" target\="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
 
 # Formulaire
 GML.thefield						= Le champ
