--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/Attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/Attachment.properties
@@ -64,13 +64,13 @@ ScheduledPurgeActify = 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,18,19,20,21,22,2
 # In minutes delay for a directory to be considered as proceeded by Actify and to be deleted
 DelayBeforePurge = 4
 
-# Gestion des envois de mail pour les fichiers réservés
+# Gestion des envois de mail pour les fichiers r\u00e9serv\u00e9s
 
-# date et heure de la notification automatique pour les fichiers réservés
+# date et heure de la notification automatique pour les fichiers r\u00e9serv\u00e9s
 # sous la forme : minutes (0-59) hours (0-23) days of a month (1-31) months (1-12) day of a week (0-6)
 cronScheduledReservedFile = 00 16 * * *
 
-# % de temps avant relance intermédiaire (entre 0 et 100)
+# % de temps avant relance interm\u00e9diaire (entre 0 et 100)
 DelayReservedFile = 60
 
 
@@ -80,3 +80,5 @@ ui.useContextualMenu = false
 
 attachment.index.separately = true
 attachment.index.incorporated = true
+
+deconnectedMode=true
