--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -333,6 +333,7 @@ GML.internalDomain=Domaine mixte
 GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
 GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
 GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
+GML.information.dialog.title = Information
 GML.confirmation.dialog.title = Confirmation
 GML.preview = Pr\u00e9visualiser le fichier
 GML.preview.dialog.title = Aper\u00e7u
