--- a/lib-core/src/test/resources/org/silverpeas/password/settings/passwordNotDefined.properties
+++ b/lib-core/src/test/resources/org/silverpeas/password/settings/passwordNotDefined.properties
@@ -31,11 +31,24 @@ password.rule.maxLength.value=
 password.rule.specialChars=
 # Blank forbidden
 password.rule.blankForbidden=
-# At least one uppercase character
-password.rule.atLeastOneUppercase=
-# At least one lowercase character
-password.rule.atLeastOneLowercase=
-# At least one digit
-password.rule.atLeastOneDigit=
-# At least one special char
-password.rule.atLeastOneSpecialChar=
+# Sequential character forbidden
+password.rule.sequentialForbidden=
+# At least X uppercase character
+password.rule.atLeastXUppercase=
+password.rule.atLeastXUppercase.combined=
+password.rule.atLeastXUppercase.X=
+# At least X lowercase character
+password.rule.atLeastXLowercase=
+password.rule.atLeastXLowercase.combined=
+password.rule.atLeastXLowercase.X=
+# At least X digit
+password.rule.atLeastXDigit=
+password.rule.atLeastXDigit.combined=
+password.rule.atLeastXDigit.X=
+# At least X special char
+password.rule.atLeastXSpecialChar=
+password.rule.atLeastXSpecialChar.combined=
+password.rule.atLeastXSpecialChar.X=
+
+# Nb rules that have to match in combination of rules
+password.combination.nbMatchingRules=
