--- a/web-core/src/test/resources/org/silverpeas/password/multilang/passwordBundle.properties
+++ b/web-core/src/test/resources/org/silverpeas/password/multilang/passwordBundle.properties
@@ -25,7 +25,8 @@
 password.rule.minLength.description=au moins * caract\u00e8res
 password.rule.maxLength.description=pas plus de * caract\u00e8res
 password.rule.blankForbidden.description=pas d'espace
-password.rule.atLeastOneUppercase.description=au moins une majuscule
-password.rule.atLeastOneLowercase.description=au moins une minuscule
-password.rule.atLeastOneDigit.description=au moins un chiffre
-password.rule.atLeastOneSpecialChar.description=au moins un caract\u00e8re sp\u00e9cial (*)
+password.rule.sequentialForbidden.description=pas de caractères identiques qui se suivent
+password.rule.atLeastXUppercase.description=au moins * majuscule(s)
+password.rule.atLeastXLowercase.description=au moins * minuscule(s)
+password.rule.atLeastXDigit.description=au moins * chiffre(s)
+password.rule.atLeastXSpecialChar.description=au moins * caract\u00e8re(s) sp\u00e9cial(aux) (*)
