--- a/config-core/src/main/config/properties/org/silverpeas/password/multilang/passwordBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/password/multilang/passwordBundle.properties
@@ -22,11 +22,15 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-password.rule.requirements=Le mot de passe doit respecter les r\u00e8gles suivantes :
+password.rule.requirements=Le mot de passe doit respecter les exigences suivantes :
+password.rule.combination={0} des r\u00e8gles suivantes :
 password.rule.minLength.description=au moins * caract\u00e8res
 password.rule.maxLength.description=pas plus de * caract\u00e8res
 password.rule.blankForbidden.description=pas d'espace
-password.rule.atLeastOneUppercase.description=au moins une majuscule
-password.rule.atLeastOneLowercase.description=au moins une minuscule
-password.rule.atLeastOneDigit.description=au moins un chiffre
-password.rule.atLeastOneSpecialChar.description=au moins un caract\u00e8re sp\u00e9cial (*)
+password.rule.sequentialForbidden.description=pas de caract\u00e8res identiques qui se suivent
+password.rule.atLeastXUppercase.description=au moins * majuscule(s)
+password.rule.atLeastXLowercase.description=au moins * minuscule(s)
+password.rule.atLeastXDigit.description=au moins * chiffre(s)
+password.rule.atLeastXSpecialChar.description=au moins * caract\u00e8re(s) sp\u00e9cial(aux) (*)
+password.checking.error.message=Le mot de passe ne respecte pas les r\u00e8gles suivantes : *
+password.checking.combined.error.message=Le mot de passe doit respecter * des r\u00e8gles suivantes : *
