--- a/lib-core/src/test/resources/org/silverpeas/password/settings/password.properties
+++ b/lib-core/src/test/resources/org/silverpeas/password/settings/password.properties
@@ -31,11 +31,24 @@ password.rule.maxLength.value=16
 password.rule.specialChars=%*!?$-+#&=.,;
 # Blank forbidden
 password.rule.blankForbidden=true
-# At least one uppercase character
-password.rule.atLeastOneUppercase=true
-# At least one lowercase character
-password.rule.atLeastOneLowercase=true
-# At least one digit
-password.rule.atLeastOneDigit=true
-# At least one special char
-password.rule.atLeastOneSpecialChar=true
+# Sequential character forbidden
+password.rule.sequentialForbidden=true
+# At least X uppercase character
+password.rule.atLeastXUppercase=true
+password.rule.atLeastXUppercase.combined=false
+password.rule.atLeastXUppercase.X=1
+# At least X lowercase character
+password.rule.atLeastXLowercase=true
+password.rule.atLeastXLowercase.combined=false
+password.rule.atLeastXLowercase.X=1
+# At least X digit
+password.rule.atLeastXDigit=true
+password.rule.atLeastXDigit.combined=false
+password.rule.atLeastXDigit.X=1
+# At least X special char
+password.rule.atLeastXSpecialChar=true
+password.rule.atLeastXSpecialChar.combined=false
+password.rule.atLeastXSpecialChar.X=1
+
+# Nb rules that have to match in combination of rules
+password.combination.nbMatchingRules=3
