--- a/lib-core/src/test/resources/org/silverpeas/password/settings/passwordBadDefined.properties
+++ b/lib-core/src/test/resources/org/silverpeas/password/settings/passwordBadDefined.properties
@@ -31,11 +31,24 @@ password.rule.maxLength.value=4
 password.rule.specialChars=azerty
 # Blank forbidden
 password.rule.blankForbidden=nan
-# At least one uppercase character
-password.rule.atLeastOneUppercase=nan
-# At least one lowercase character
-password.rule.atLeastOneLowercase=nan
-# At least one digit
-password.rule.atLeastOneDigit=nan
-# At least one special char
-password.rule.atLeastOneSpecialChar=nan
+# Sequential character forbidden
+password.rule.sequentialForbidden=nan
+# At least X uppercase character
+password.rule.atLeastXUppercase=nan
+password.rule.atLeastXUppercase.combined=nan
+password.rule.atLeastXUppercase.X=nan
+# At least X lowercase character
+password.rule.atLeastXLowercase=nan
+password.rule.atLeastXLowercase.combined=nan
+password.rule.atLeastXLowercase.X=-1
+# At least X digit
+password.rule.atLeastXDigit=nan
+password.rule.atLeastXDigit.combined=nan
+password.rule.atLeastXDigit.X=-1
+# At least X special char
+password.rule.atLeastXSpecialChar=nan
+password.rule.atLeastXSpecialChar.combined=nan
+password.rule.atLeastXSpecialChar.X=nan
+
+# Nb rules that have to match in combination of rules
+password.combination.nbMatchingRules=nan
