--- a/lib-core/src/test/resources/org/silverpeas/password/settings/passwordCombinationDefined.properties
+++ b/lib-core/src/test/resources/org/silverpeas/password/settings/passwordCombinationDefined.properties
@@ -22,15 +22,33 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-password.rule.requirements=Password must meet the following requirements:
-password.rule.combination={0} of following rules :
-password.rule.minLength.description=at least * characters
-password.rule.maxLength.description=at most * characters
-password.rule.blankForbidden.description=no blank space
-password.rule.sequentialForbidden.description=no identical characters which follow themselves
-password.rule.atLeastXUppercase.description=at least * uppercase
-password.rule.atLeastXLowercase.description=at least * lowercase
-password.rule.atLeastXDigit.description=at least * digit
-password.rule.atLeastXSpecialChar.description=at least * special character(s) (*)
-password.checking.error.message=Password doesn't meet the following requirements: *
-password.checking.combined.error.message=Password must meet * of the following requirements: *
+# Minimum length
+password.rule.minLength=10
+# Maximum length
+password.rule.maxLength=true
+password.rule.maxLength.value=20
+# Special characters
+password.rule.specialChars=^*?$.;
+# Blank forbidden
+password.rule.blankForbidden=true
+# Sequential character forbidden
+password.rule.sequentialForbidden=true
+# At least X uppercase character
+password.rule.atLeastXUppercase=false
+password.rule.atLeastXUppercase.combined=true
+password.rule.atLeastXUppercase.X=3
+# At least X lowercase character
+password.rule.atLeastXLowercase=false
+password.rule.atLeastXLowercase.combined=true
+password.rule.atLeastXLowercase.X=1
+# At least X digit
+password.rule.atLeastXDigit=false
+password.rule.atLeastXDigit.combined=true
+password.rule.atLeastXDigit.X=2
+# At least X special char
+password.rule.atLeastXSpecialChar=false
+password.rule.atLeastXSpecialChar.combined=true
+password.rule.atLeastXSpecialChar.X=2
+
+# Nb rules that have to match in combination of rules
+password.combination.nbMatchingRules=3
