--- a/lib-core/src/test/resources/org/silverpeas/password/settings/passwordNotRequired.properties
+++ b/lib-core/src/test/resources/org/silverpeas/password/settings/passwordNotRequired.properties
@@ -31,11 +31,24 @@ password.rule.maxLength.value=20
 password.rule.specialChars=^*?$.;
 # Blank forbidden
 password.rule.blankForbidden=false
-# At least one uppercase character
-password.rule.atLeastOneUppercase=false
-# At least one lowercase character
-password.rule.atLeastOneLowercase=false
-# At least one digit
-password.rule.atLeastOneDigit=false
-# At least one special char
-password.rule.atLeastOneSpecialChar=false
+# Sequential character forbidden
+password.rule.sequentialForbidden=false
+# At least X uppercase character
+password.rule.atLeastXUppercase=true
+password.rule.atLeastXUppercase.combined=false
+password.rule.atLeastXUppercase.X=0
+# At least X lowercase character
+password.rule.atLeastXLowercase=false
+password.rule.atLeastXLowercase.combined=false
+password.rule.atLeastXLowercase.X=0
+# At least X digit
+password.rule.atLeastXDigit=false
+password.rule.atLeastXDigit.combined=false
+password.rule.atLeastXDigit.X=1
+# At least X special char
+password.rule.atLeastXSpecialChar=true
+password.rule.atLeastXSpecialChar.combined=false
+password.rule.atLeastXSpecialChar.X=0
+
+# Nb rules that have to match in combination of rules
+password.combination.nbMatchingRules=3
