Feature #4142 : adding password services (including password rule management). - wiring change password with the new Silverpeas JQuery Plugin - updating some copyrights - adjusting the UI rendering and associated behaviors

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -63,6 +63,7 @@ authentication.password.aboutToExpire = Votre mot de passe arrive bient\u00F4t \
 authentication.password.expired = Votre mot de passe a expir\u00E9. Vous devez le changer pour pouvoir acc\u00E9der \u00E0 l'application.
 authentication.password.change = Changer le mot de passe
 authentication.password.remindMeLater = Me le rappeler plus tard
+authentication.password.showRules = Voir les r\u00e8gles sur les mots de passe
 
 registration.title = Enregistrement
 registration.noSilverpeasAccount = Vous ne poss\u00e9dez pas encore de compte dans Silverpeas.
