The Notification API implementation now use the netty connector available under the name /ConnectionFactory in JNDI

--- a/config-core/src/main/config/properties/org/silverpeas/util/jndi.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/jndi.properties
@@ -146,7 +146,7 @@ JMS_FACTORY = java:/JmsXA
 
 # The JMS implementation of the Notification API manages itself the life-cycle of the connections
 # and of the sessions. So it requires the connection factory to access directly the JMS.
-NOTIF_API_JMS = java:/XAConnectionFactory
+NOTIF_API_JMS = /ConnectionFactory
 
 #
 # exemple pour une config jboss
