Bug #4111 : adding new parameter in smtpSettings.properties. - forceReplyToSenderField : indicates that "Reply To" (e-mail) have to be filled as the sender is not the system

--- a/config-core/src/main/config/properties/org/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
@@ -21,13 +21,21 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+# SMTP Server & Authentication
 SMTPAuthentication = true
-SMTPUser = leconcorde38@orange.fr
-SMTPPwd = cgkw7a6
-SMTPPort = 587
-SMTPServer = smtp-msa.orange.fr
+SMTPUser =
+SMTPPwd =
+SMTPPort = 25
+SMTPServer = 
 SMTPDebug = false
 SMTPSecure = false
+
+# Generic email address used if domain of email address of the sender is not authorized
 NotificationAddress = silverpeas@silverpeas.com
+# Personal name used when generic email address is used
 NotificationPersonalName = Silverpeas
-AuthorizedDomains=silverpeas.net,silverpeas.org,silverpeas.com,oeovo.com,oosphere.com,oosphere.ch
+# List of authorized domains. If empty, all domains are authorized and generic email address is never used
+AuthorizedDomains=
+# If true, "reply to" field of emails is always filled (unless the sender is the system)
+ForceReplyToSenderField=false
