--- a/lib-core/src/test/resources/org/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
+++ b/lib-core/src/test/resources/org/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
@@ -29,3 +29,4 @@ SMTPServer = smtp-msa.orange.fr
 SMTPDebug = false
 SMTPSecure = false
 NotificationAddress=silverpeas@silverpeas.com
+NotificationPersonalName = Silverpeas
