--- a/it-test-core/pom.xml
+++ b/it-test-core/pom.xml
@@ -77,6 +77,7 @@
             <directory>src/test/resources</directory>
             <filtering>true</filtering>
             <excludes>
+              <exclude>**/*.rtf</exclude>
               <exclude>**/*.doc</exclude>
               <exclude>**/*.docx</exclude>
               <exclude>**/*.jpEg</exclude>
@@ -96,6 +97,7 @@
             <directory>src/test/resources</directory>
             <filtering>false</filtering>
             <includes>
+              <include>**/*.rtf</include>
               <include>**/*.doc</include>
               <include>**/*.docx</include>
               <include>**/*.jpEg</include>
