feature #4148 :  Move the code related to the authentication to the package org.silverpeas.authentication. Only old code seaming no more used by anymore stays in place

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainLDAP.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainLDAP.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
 #
@@ -28,16 +28,16 @@
 fallbackType=always
 
 # Authentication servers
-# Available types are : com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
+# Available types are : org.silverpeas.authentication.AuthenticationNT, org.silverpeas.authentication.AuthenticationSQL and org.silverpeas.authentication.AuthenticationLDAP
 
 autServersCount=3
 
-autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationNT
+autServer0.type=org.silverpeas.authentication.AuthenticationNT
 autServer0.enabled=true
 autServer0.NTRISPort=9999
 autServer0.NTRISHost=TESTEXCHANGE
 
-autServer1.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
+autServer1.type=org.silverpeas.authentication.AuthenticationLDAP
 autServer1.enabled=false
 autServer1.LDAPHost=TESTEXCHANGE
 autServer1.LDAPPort=389
@@ -46,7 +46,7 @@ autServer1.LDAPAccessPasswd=nb
 autServer1.LDAPUserBaseDN=CN=Users,DC=TSTEXCHANGE
 autServer1.LDAPUserLoginFieldName=sAMAccountName
 
-autServer2.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
+autServer2.type=org.silverpeas.authentication.AuthenticationLDAP
 autServer2.enabled=false
 autServer2.LDAPHost=TESTEXCHANGE
 autServer2.LDAPPort=389
