--- a/lib-core/src/test/resources/org/silverpeas/authentication/autDomainSP.properties
+++ b/lib-core/src/test/resources/org/silverpeas/authentication/autDomainSP.properties
@@ -28,11 +28,11 @@
 fallbackType=always
 
 # Authentication servers
-# Available types are : com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
+# Available types are : org.silverpeas.authentication.AuthenticationNT, org.silverpeas.authentication.AuthenticationSQL and org.silverpeas.authentication.AuthenticationLDAP
 
 autServersCount=1
 
-autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationSQL
+autServer0.type=org.silverpeas.authentication.AuthenticationSQL
 autServer0.enabled=true
 autServer0.SQLJDBCUrl=${jdbc_url}
 autServer0.SQLAccessLogin=${jdbc_login}
@@ -42,4 +42,3 @@ autServer0.SQLUserTableName                   = DomainSP_User
 autServer0.SQLUserLoginColumnName             = login
 autServer0.SQLUserPasswordColumnName          = password
 autServer0.SQLUserPasswordAvailableColumnName = passwordValid
-autServer0.SQLPasswordEncryption=CryptUnix
