--- a/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainMSAD.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainMSAD.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
 #
@@ -30,11 +30,11 @@ fallbackType=always
 allowPasswordChange=false
 
 # Authentication servers
-# Available types are : com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
+# Available types are : org.silverpeas.authentication.AuthenticationNT, org.silverpeas.authentication.AuthenticationSQL and org.silverpeas.authentication.AuthenticationLDAP
 
 autServersCount=1
 
-autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
+autServer0.type=org.silverpeas.authentication.AuthenticationLDAP
 autServer0.enabled=true
 autServer0.LDAPHost=192.168.0.111
 autServer0.LDAPPort=389
