--- a/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainOpenDJ.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainOpenDJ.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
 #
@@ -28,15 +28,12 @@
 fallbackType=always
 
 # Authentication servers
-# Available types are : 
-#  com.stratelia.silverpeas.authentication.AuthenticationNT
-#  com.stratelia.silverpeas.authentication.AuthenticationSQL
-#  com.stratelia.silverpeas.authentication.AuthenticationLDAP
+# Available types are : org.silverpeas.authentication.AuthenticationNT, org.silverpeas.authentication.AuthenticationSQL and org.silverpeas.authentication.AuthenticationLDAP
 allowPasswordChange=false
 
 autServersCount=1
 
-autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
+autServer0.type=org.silverpeas.authentication.AuthenticationLDAP
 autServer0.enabled=true
 autServer0.LDAPHost=localhost
 autServer0.LDAPPort=1389
