--- a/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainSP.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/autDomainSP.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
 #
@@ -30,11 +30,11 @@ fallbackType=none
 allowPasswordChange=true
 
 # Authentication servers
-# Available types are : com.stratelia.silverpeas.authentication.AuthenticationCAS, com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
+# Available types are : org.silverpeas.authentication.AuthenticationNT, org.silverpeas.authentication.AuthenticationSQL and org.silverpeas.authentication.AuthenticationLDAP
 
 autServersCount=2
 
-autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationCAS
+autServer0.type=org.silverpeas.authentication.AuthenticationCAS
 autServer0.enabled=false
 autServer0.SQLJDBCUrl=@AdminDatabaseURL@
 autServer0.SQLAccessLogin=@AdminDatabaseLogin@
@@ -43,7 +43,7 @@ autServer0.SQLDriverClass=@AdminDatabaseDriver@
 autServer0.SQLUserTableName=st_user
 autServer0.SQLUserLoginColumnName=login
 
-autServer1.type=com.stratelia.silverpeas.authentication.AuthenticationSQL
+autServer1.type=org.silverpeas.authentication.AuthenticationSQL
 autServer1.enabled=true
 autServer1.SQLJDBCUrl = @AdminDatabaseURL@
 autServer1.SQLAccessLogin  = @AdminDatabaseLogin@
@@ -53,14 +53,13 @@ autServer1.SQLUserTableName                   = DomainSP_User
 autServer1.SQLUserLoginColumnName             = login
 autServer1.SQLUserPasswordColumnName          = password
 autServer1.SQLUserPasswordAvailableColumnName = passwordValid
-autServer1.SQLPasswordEncryption = @CryptMethod@
 
-autServer2.type=com.stratelia.silverpeas.authentication.AuthenticationNT
+autServer2.type=org.silverpeas.authentication.AuthenticationNT
 autServer2.enabled=true
 autServer2.NTRISPort=9999
 autServer2.NTRISHost=Stratdev4
 
-autServer3.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
+autServer3.type=org.silverpeas.authentication.AuthenticationLDAP
 autServer3.enabled=false
 autServer3.LDAPHost=stratdev4
 autServer3.LDAPPort=389
