--- a/lib-core/src/test/resources/org/silverpeas/admin/domain/expectedDomainAuthenticationPropertiesFile.properties
+++ b/lib-core/src/test/resources/org/silverpeas/admin/domain/expectedDomainAuthenticationPropertiesFile.properties
@@ -7,11 +7,11 @@ allowPasswordChange  = true
 
 # Authentication servers
 # Available types are :
-#       com.stratelia.silverpeas.authentication.AuthenticationNT
-#       com.stratelia.silverpeas.authentication.AuthenticationSQL
-#       com.stratelia.silverpeas.authentication.AuthenticationLDAP
+#       org.silverpeas.authentication.AuthenticationNT
+#       org.silverpeas.authentication.AuthenticationSQL
+#       org.silverpeas.authentication.AuthenticationLDAP
 autServersCount = 1
-autServer0.type    								= com.stratelia.silverpeas.authentication.AuthenticationSQL
+autServer0.type    								= org.silverpeas.authentication.AuthenticationSQL
 autServer0.enabled 								= true
 autServer0.SQLJDBCUrl 							= jdbc:postgresql://localhost:5432/SilverpeasV5
 autServer0.SQLAccessLogin 						= postgres
@@ -21,4 +21,3 @@ autServer0.SQLUserTableName 					= DomainTestCreation_User
 autServer0.SQLUserLoginColumnName 				= login
 autServer0.SQLUserPasswordColumnName 			= password
 autServer0.SQLUserPasswordAvailableColumnName 	= passwordValid
-autServer0.SQLPasswordEncryption 				= CryptMd5
