feature #82 : Better dialog for delete file confirmation

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
@@ -112,3 +112,7 @@ attachment.dialog.delete = Supprimer le fichier ?
 attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
 attachment.dialog.comment=Commentaires
 attachment.revert=Abandonner mes modifications
+
+
+attachment.suppressionConfirmation = Etes-vous s\u00fbr(e) de vouloir supprimer le fichier
+attachment.allTranslations = Toutes les traductions
