Feature #4149 : user account validity - adding action menus to block or unblock users (administration) - adding blocked user management around user log in - adding blocked user management around WEB-Services - adding blocked user management around user blocked whereas a session is alive - formatting the jsp files at webapp root - formatting userContent.jsp file - adjusting some unit tests

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -135,8 +135,6 @@ GML.path						= Emplacement
 GML.phoneNumber 				= T\u00e9l\u00e9phone
 GML.position 					= Poste
 GML.public 						= Publique
-GML.preview						= Pr\u00e9visualisation
-GML.view							= Visualisation
 GML.previous					= Pr\u00e9c\u00e9dent
 GML.print						= Imprimer
 GML.priority 					= Priorit\u00e9
@@ -328,6 +326,13 @@ GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
 GML.internalDomain=Domaine mixte
+
+# User account
+GML.user.account.state.UNKNOWN=Etat du compte utilisateur inconnu
+GML.user.account.state.VALID=Compte valide
+GML.user.account.state.BLOCKED=Compte bloqu\u00e9
+GML.user.account.state.EXPIRED=Compte expir\u00e9
+GML.user.account.state.DELETED=Compte supprim\u00e9
 
 # Messages communs
 GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
