--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
@@ -84,6 +84,8 @@ JDP.nbCarMin = La valeur doit comporter au moins
 JDP.caracteres = caract\u00e8res
 JDP.existingLogin = Ce login est d\u00e9j\u00e0 utilis\u00e9
 JDP.valeursPossibles = Les valeurs possibles sont : 'Admin', 'AdminPdc', 'AdminDomain', 'User' ou 'Guest'
+JDP.userBlock = Bloquer un utilisateur
+JDP.userUnblock = D\u00e9bloquer un utilisateur
 JDP.userDel = Supprimer un utilisateur
 JDP.userDelConfirm = Etes-vous s&ucirc;r de vouloir supprimer cet utilisateur ?
 JDP.userImport = Importer un utilisateur
@@ -91,6 +93,7 @@ JDP.userManage = Modifier la liste des utilisateurs
 JDP.userPanelAccess = Rechercher un utilisateur ou un groupe
 JDP.userRemove = Supprimer un utilisateur
 JDP.userRights = Droits
+JDP.userState = Etat
 JDP.userSynchro = Synchroniser un utilisateur
 JDP.userUnsynchro = Supprimer la synchronisation d'un utilisateur
 JDP.userUpdate = Editer les informations de l'utilisateur
