integrating feature #4149 adding new column "last connection" when browsing domains and groups using generic terms instead of specific ones removing useless terms in multilang files replacing some old code

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -333,6 +333,7 @@ GML.user.account.state.VALID=Compte valide
 GML.user.account.state.BLOCKED=Compte bloqu\u00e9
 GML.user.account.state.EXPIRED=Compte expir\u00e9
 GML.user.account.state.DELETED=Compte supprim\u00e9
+GML.user.lastConnection = Derni\u00e8re connexion
 
 # Messages communs
 GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
