--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
@@ -34,3 +34,6 @@ customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/
 
 # Activation of quota limitation of users into a domain
 quota.domain.users.activated = false
+
+# Display column 'last connection date' in domains and groups views
+domain.users.columns.lastconnection = true
