--- a/ejb-core/favorit/pom.xml
+++ b/ejb-core/favorit/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.11.1-SNAPSHOT</version>
+    <version>5.11.1</version>
   </parent>
   
   <groupId>com.silverpeas.core.ejb-core</groupId>
