Feature #4150 : user connection attempts before blocking user account - refactoring some code - adding user connection attempt verifier - saving the last date of successful user connection

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -38,6 +38,9 @@ authentication.logon.passwordReinit = R\u00E9initialiser mon mot de passe...
 authentication.logon.with.linkedin = Identifiez-vous avec LinkedIn
 authentication.logon.with.facebook = Identifiez-vous avec Facebook
 
+# Number of connexion attempts
+authentication.attempts.remaining = * tentative(s) de connexion restante(s) avant le blocage de votre compte
+
 # traitement des erreurs de login
 authentication.logon.1 = Login ou mot de passe incorrect
 authentication.logon.2 = Probl\u00E8me technique
