--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
@@ -40,3 +40,8 @@ loginAnswerCrypted = false
 # Such new user will be created in below domainId
 newRegistrationEnabled = false
 justRegisteredDomainId = 0
+
+# Number of connexion attempts before blocking the user associated to the login (and the domain)
+# Negative, null or bad value : not activated
+# Positive value : activated
+nbConnexionAttemptsBeforeBlockingUser = 0
