--- a/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle.properties
@@ -10,5 +10,9 @@ directory.breadcrumb.4 = Annuaire du groupe
 directory.breadcrumb.5 = Annuaire du domaine
 directory.breadcrumb.6 = Annuaire de l'espace
 
+directory.sort = Ordre : 
+directory.sort.alpha = Alphab\u00e9tique
+directory.sort.newest = Derniers arriv\u00e9s
+
 directory.query.error.title = Recherche impossible
 directory.query.error.msg = Les caractères * et ? sont des <b>caractères joker</b>.<br/>Ils ne peuvent pas être utilisés au début d'un terme.<br/><br/>Merci de corriger la requête et de relancer votre recherche...
