--- a/config-core/src/main/config/properties/org/silverpeas/directory/settings/DirectorySettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/settings/DirectorySettings.properties
@@ -1,11 +1,2 @@
-#Specify if the key ST_PASSWORD must be processed or not
-#possible values = true, false
-PasswordKeyEnable = true
+# Maximum number of users to display by page
 ELEMENTS_PER_PAGE=20
-
-homePhone=false
-fax=false
-cellularPhone=false
-
-templatePath = C:\\SilverpeasV5\\silverpeas\\resources\\StringTemplates\\directory
-customersTemplatePath = C:\\SilverpeasV5\\silverpeas\\data\\resources\\StringTemplates\\directory
