closing feature #3689 by adding second part of the feature Displaying a help message which is managed by a cookie However, this message can be displayed at any time when clicking on the 'Help' link This message can be customized with the help of StringTemplate

--- a/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/directory/multilang/DirectoryBundle.properties
@@ -16,3 +16,5 @@ directory.sort.newest = Derniers arriv\u00e9s
 
 directory.query.error.title = Recherche impossible
 directory.query.error.msg = Les caractères * et ? sont des <b>caractères joker</b>.<br/>Ils ne peuvent pas être utilisés au début d'un terme.<br/><br/>Merci de corriger la requête et de relancer votre recherche...
+
+directory.help.title = AIDE - Recherche d'une personne dans l'annuaire
