Now the database properties used in the tests are set by the properties defined in the POM of Silverpeas-Component. Theses properties are set with default values for PostgreSQL database but they can be overriden by passing them with the -D flag. Each filters.properties in test use theses properties to set their own JDBC properties declaration. For tests using the H2 in-memory database, just change the filters.properties with its JDBC parameters

--- a/ejb-core/versioning/src/test/resources/jdbc.properties
+++ b/ejb-core/versioning/src/test/resources/jdbc.properties
@@ -21,8 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/SilverpeasV5
-username=postgres
-password=postgres
+driverClassName=${jdbc_driver}
+url=${jdbc_url}
+username=${jdbc_login}
+password=${jdbc_password}
 jndi.name=jdbc/Silverpeas
