--- a/ejb-core/versioning/src/test/filters/filters.properties
+++ b/ejb-core/versioning/src/test/filters/filters.properties
@@ -20,10 +20,10 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-jdbc_driver=org.h2.Driver
-jdbc_url=jdbc:h2:mem:node-test;DB_CLOSE_DELAY=-1
-jdbc_login=sa
-jdbc_password=
+#
+jdbc_driver=${test.jdbc.driver}
+jdbc_url=${test.jdbc.url}
+jdbc_login=${test.jdbc.user}
+jdbc_password=${test.jdbc.password}
 
 jndi_directory=${basedir}/target/jndi
