--- a/test-core/src/main/filters/filters.properties
+++ b/test-core/src/main/filters/filters.properties
@@ -21,11 +21,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-jdbc_driver=org.postgresql.Driver
-jdbc_url=jdbc:postgresql://localhost:5432/SilverpeasV5
-jdbc_login=postgres
-jdbc_password=postgres
+jdbc_driver=${test.jdbc.driver}
+jdbc_url=${test.jdbc.url}
+jdbc_login=${test.jdbc.user}
+jdbc_password=${test.jdbc.password}
 
 jndi_directory=${basedir}/target/jndi
