integrating feature #4150 renaming misspelled class SilverpeasSessionOpener.java renaming property into nbConnectionAttemptsBeforeBlockingUser adding sort behavior on user state in domain and group views

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -47,7 +47,7 @@ authentication.logon.2 = Probl\u00E8me technique
 authentication.logon.3 = Votre session a expir\u00E9
 authentication.logon.4 = D\u00E9connexion utilisateur
 authentication.logon.5 = Aucun compte rattach\u00E9 \u00E0 votre compte de r\u00E9seau social
-authentication.logon.Error_UserAccountBlocked = Votre compte est bloqu\u00e9, merci de contacter un administrateur
+authentication.logon.Error_UserAccountBlocked = Votre compte est bloqu\u00e9<br/>Veuillez contacter un administrateur
 
 authentication.reminder.label = Veuillez r\u00E9pondre \u00E0 la question personnelle ci-dessous
 authentication.reminder.noQuestion = Vous n'avez pas encore choisi de question personnelle. Cette question vous permettra de r\u00E9initialiser votre mot de passe en cas d'oubli.
