--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
@@ -52,6 +52,10 @@ JDP.px = /util/icons/colorPix/1px.gif
 JDP.info = /util/icons/info.gif
 
 JDP.user = /util/icons/user.gif
+JDP.user.state.UNKNOWN = /util/icons/user.gif
+JDP.user.state.VALID = /util/icons/user.gif
+JDP.user.state.BLOCKED = /util/icons/user.gif
+JDP.user.state.EXPIRED = /util/icons/user.gif
 JDP.userAdd = /util/icons/user_add_to_group.gif
 JDP.userCreate = /util/icons/create-action/add-user.png
 JDP.importCsv = /util/icons/create-action/import-csv.png
