Feature #4152 : adding a mechanism to force the user to change its password

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/authentication.properties
@@ -38,7 +38,7 @@ authentication.logon.passwordReinit = R\u00E9initialiser mon mot de passe...
 authentication.logon.with.linkedin = Identifiez-vous avec LinkedIn
 authentication.logon.with.facebook = Identifiez-vous avec Facebook
 
-# Number of connexion attempts
+# Number of connection attempts
 authentication.attempts.remaining = * tentative(s) de connexion restante(s) avant le blocage de votre compte
 
 # traitement des erreurs de login
