--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
@@ -41,7 +41,17 @@ loginAnswerCrypted = false
 newRegistrationEnabled = false
 justRegisteredDomainId = 0
 
-# Number of connexion attempts before blocking the user associated to the login (and the domain)
+# Number of connection attempts before blocking the user associated to the login (and the domain)
 # Negative, null or bad value : not activated
 # Positive value : activated
 nbConnectionAttemptsBeforeBlockingUser = 0
+
+# Number of user connections before the server is forcing the user to change his password
+# Negative, null or bad value : not activated
+# Positive value : activated
+nbSuccessfulUserConnectionsBeforeForcingPasswordChange = 0
+
+# Number of user connections before the server is proposing to the user to change his password
+# Negative, null or bad value : not activated
+# Positive value : activated
+nbSuccessfulUserConnectionsBeforeProposingToChangePassword = 0
