--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/passwordExpiration.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/passwordExpiration.properties
@@ -27,7 +27,7 @@
 # Notification type :
 # POPUP : popup message after login
 # PASSWORDCHANGE : user is redirected to a page to change password
-notificationType=POPUP
+notificationType=PASSWORDCHANGE
 
 # password Change page URL : admin/jsp/passwordAboutToExpire.jsp
 passwordChangeURL=/defaultPasswordAboutToExpire.jsp
