Feature #4152 : adding the possibility to oblige the user to change his password on his first login

--- a/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/settings/authenticationSettings.properties
@@ -41,6 +41,9 @@ loginAnswerCrypted = false
 newRegistrationEnabled = false
 justRegisteredDomainId = 0
 
+# If true, the user must change his password on first login
+userMustChangePasswordOnFirstLogin = false
+
 # Number of connection attempts before blocking the user associated to the login (and the domain)
 # Negative, null or bad value : not activated
 # Positive value : activated
