closing main part of feature #4277

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -180,6 +180,7 @@ JSPP.inheritanceToUse = pour utiliser les droits de l'espace.
 JSPP.SpaceAppearance = Apparence
 JSPP.SpaceLook = Th\u00e8me
 JSPP.WallPaper = Bandeau
+JSPP.CSS = Styles
 
 JSPP.inProgress = Traitement en cours !<br/>Veuillez patienter...
 JSPP.parameters = Param\u00e8tres
