feature #4147 :  Add a CAST5 cipher. Now the key passed in the encryption and in the decryption methods of the cipher implementations is an instance of a new class, CipherKey; the CipherKey class wraps the concrete representation of the key (it can be a raw key or one coming from a key file, ...)

--- a/config-core/src/main/config/properties/org/silverpeas/external/webConnections/settings/webConnectionsSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/external/webConnections/settings/webConnectionsSettings.properties
@@ -21,4 +21,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-keycode = \u0024\u003F\u0066\u004B\u006D\u0025\u002A
+
+# the key code must be in hexadecimal
+keycode = 243f664b6d252a
