feature #4147 : Add the following features to the ContentEncryptionService: the encryption and the decryption of contents, whatever they are. In order to be agnostic about the content type, a content is passed either as a one or more strings, each of them representing a content field/property or as a Map in which each entry is a field/property of the content. The encryption and the decryption of contents can be also performed by passing as arguments one or more providers of contents. The provider is a way to give to the encryption service several contents to process by loading once the encryption key and the cipher; these contents are processed in flow (a content is taken, processed by the encryption service and then returned updated to the provider).

--- a/config-core/src/main/config/properties/org/silverpeas/general.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/general.properties
@@ -35,6 +35,8 @@ uploadsIndexPath = @IndexDir@
 removeLocksOnInit=yes
 # working directory for temporaries files
 tempPath = @TempDir@
+# security directory
+securityPath = @SecurityDir@
 
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
