--- a/lib-core/src/test/resources/org/silverpeas/general.properties
+++ b/lib-core/src/test/resources/org/silverpeas/general.properties
@@ -36,6 +36,9 @@ removeLocksOnInit=yes
 # working directory for temporaries files
 tempPath=${project.build.directory}/temp/temp
 
+# silverpeas security directory path
+securityPath=tempPath=${project.build.directory}/temp/.silverpeas
+
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
 redirectAppInMaintenance = /admin/jsp/appInMaintenance.jsp
