feature #4147 : The change can be divided into two parts: - modification of the previous code: extract an interface from the ContentEncryptionService and add a test class dedicated to test the concurrent accesses work correctly and with a better coverage of the cases. Fix some minor bugs discovered in the tests. - add a web service to set a cipher key in front of the ContentEncryptionService service. Add also a new JSP page in the administration console to set or to change a cipher key (the look&feel is for instance ugly and requires to be updated)

--- a/lib-core/src/test/resources/org/silverpeas/general.properties
+++ b/lib-core/src/test/resources/org/silverpeas/general.properties
@@ -23,7 +23,7 @@
 #
 ApplicationURL=/silverpeas/
 
-#Nom du workspace (configur\u00E9 dans repository.xml)
+#Nom du workspace (configur\u00e9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
@@ -37,7 +37,7 @@ removeLocksOnInit=yes
 tempPath=${project.build.directory}/temp/temp
 
 # silverpeas security directory path
-securityPath=tempPath=${project.build.directory}/temp/.silverpeas
+securityPath=${project.build.directory}/temp/.silverpeas
 
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
@@ -51,7 +51,7 @@ smallLogo=/admin/jsp/icons/logo_silverpeas.gif
 smallLogoSilverBlue=icons/DomainbarSilverblue/logo.gif
 
 # advanced search with PDC
-# doit \u00EAtre \u00E0 true ou false
+# doit \u00eatre \u00e0 true ou false
 advancedSearchWithPDC = true
 
 # Domain visibility parameter
