--- a/web-core/src/test/resources/org/silverpeas/general.properties
+++ b/web-core/src/test/resources/org/silverpeas/general.properties
@@ -38,6 +38,9 @@ removeLocksOnInit=yes
 # working directory for temporaries files
 tempPath=${project.build.directory}/temp/temp
 
+# silverpeas security directory path
+securityPath=${project.build.directory}/temp/.silverpeas
+
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
 redirectAppInMaintenance = /admin/jsp/appInMaintenance.jsp
