feature #4147 :  Refine the JSP. Fix the problem of the load of Bouncy Castle classes with the JBoss VFS by loading them explicitly in Silverpeas at starting.

--- a/config-core/src/main/config/properties/org/silverpeas/general.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/general.properties
@@ -89,3 +89,9 @@ availableToolIds=scheduleEventTool
 # There is no need to add the Silverpeas domain server, it is automatically added in request response by the server.
 # Limited allowed domains, for example : "http://www.allowedDomain.com, http://www.otherAllowedDomain.fr"
 web.request.domain.allowed =
+
+# Classes to load explicitly in Silverpeas (using its own classloader) for the JBoss VFS
+# can not interfere with them (a piece of utterly shit). For all classes listed here, the jar that
+# provides them must be placed in the SILVERPEAS_HOME/repository/lib directory.
+# The property is a list of comma-separated complete class names.
+bypass.jboss.vfs=org.bouncycastle.jce.provider.BouncyCastleProvider
