integrating feature #4147 enhancing page to import cipher key removing Java warnings on new package org.silverpeas.util.crypto

--- a/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle.properties
@@ -67,4 +67,4 @@ JMAP.header1 = Gestion globale du mode Maintenance
 JMAP.maintenanceOnAir = L'application est actuellement en mode maintenance....
 JMAP.active = Activer
 JMAP.desactive = D\u00e9sactiver
-JCIPHER=Cl\u00e9 de cryptage de contenu
+JCIPHER=Cryptage de contenu
