feature #3756 :  Add the name of the domain to which the user belongs in the user profile page

--- a/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle.properties
@@ -33,3 +33,4 @@ JOP.profile = Profile
 JOP.instance = Instance
 PDCSubscription.show = Show user PDC Subscriptions
 JOP.silverPassword = Mot de passe Silverpeas
+JOP.domain=Domaine
